# panollava

./: .dockerignore  .gitignore  AGENTS.md  CONFIG_GUIDE.md  Dockerfile  EVALUATION_FIX_SUMMARY.md  EVALUATION_METRICS_GUIDE.md  EVAL_IMPROVEMENTS_REPORT.md  IMPROVED_USAGE.md  IMPROVEMENT_SUMMARY.md  INSTRUCTION_TUNING_README.md  LICENSE  LORA_LOADING_EXPLAINED.md  MAMBA_SETUP.md  Makefile  README.md  USAGE.md  VLM_ABLATION_README.md  VLM_FINETUNING_GUIDE.md  add_references_to_results.py  all_stages_test.sh  analyze_eval_results.py  anyres_erp.py  check_env.py  config copy.json  config.json  config.yaml  config_sig2qwen3.json  create_config.py  csv_eval.py  datasets_usage.ipynb  debug_dataset.py  debug_generate_issue.py  download_and_test.py  download_raw.py  eval.py  eval_comprehensive.py  extract_visual_features.ipynb  fix_mamba_cuda.sh  inference.py  (+42 more)
.github/: copilot-instructions.md
config/: README.md  finetune_stage.yaml  model_config.yaml  resampler_stage.yaml  training_config.yaml  vision_stage.yaml
configs/: anyres_e2p.yaml  anyres_e2p_bimamba.yaml  anyres_e2p_mlp.yaml  anyres_e2p_novision.yaml  anyres_e2p_singlehead.yaml  base.yaml  cubemap.yaml  default.yaml  hp_tuned_3stage.yaml  internvl2b_baseline.yaml  internvl_quic360_test.yaml  legacy.json  panovlm.yaml  resize.yaml  silding.yaml  spherical_native.yaml  vlm_ablation.yaml
configs/baseline/: ablation_internvl35_2b_anyrese2p_noloss.yaml  ablation_internvl35_2b_anyrese2p_pe_only.yaml  ablation_internvl35_2b_cubemap_noloss.yaml  ablation_internvl35_2b_densecl_25overlap.yaml  anyres_e2p_qwen25_3b.yaml  cubemap_qwen25_3b.yaml  default.yaml  dynamic_qwen25_3b.yaml  e4a_internvl35-2b_fov90_v5.yaml  e4b_internvl35-2b_fov60_v7.yaml  e4c_internvl35-2b_fov30_v13.yaml  e4d_internvl35-2b_phyov25_v12.yaml  native_blip2_2.7b.yaml  native_gemma3_4b.yaml  native_internvl25_2b.yaml  native_internvl25_4b.yaml  native_internvl35_1b.yaml  native_internvl35_2b.yaml  native_qwen25_3b.yaml  native_qwen2_2b.yaml  ortholora_internvl35_2b.yaml  ortholora_vicreg_internvl35_2b.yaml  panoadapt_gemma3_4b.yaml  panoadapt_internvl35_2b.yaml  panoadapt_pe_densecl_qwen25_3b.yaml  panoadapt_pe_densecl_qwen25_3b_fix.yaml  panoadapt_pe_only_qwen25_3b.yaml  panoadapt_pe_qwen25_3b.yaml  panoadapt_pe_vicreg_batchwise_qwen25_3b.yaml  panoadapt_pe_vicreg_pairwise_qwen25_3b.yaml  panoadapt_vicreg_pairwise_gemma3_4b.yaml  panoadapt_vicreg_pairwise_internvl35_2b.yaml  panoadapt_vicreg_pairwise_internvl35_2b_25overlap.yaml  panoadapt_vicreg_pairwise_qwen25_3b.yaml  pinhole_qwen25_3b.yaml
configs/cora/: ablation_cubemap.yaml  ablation_e2p.yaml  ablation_resize.yaml  contrastive.yaml  default.yaml  densecl.yaml  densecl_overlap05.yaml  vicreg.yaml  vicreg_batchwise.yaml  vicreg_overlap05.yaml
configs/stage_snapshots/: finetune.json  instruction_tuning.json  resampler.json  resampler_training.json  vision.json  vision_pretraining.json
configs/stages/: finetune.yaml  resampler.yaml  vision.yaml
data/quic360/: downtest.csv  test.csv  train.csv  valid.csv
docs/: ANYRES_ERP_INTEGRATION.md  ARCHITECTURE.md  BASELINE_RESULTS.md  EVALUATION_PREPROCESSING_GUIDE.md  EVALUATION_SCRIPTS_SUMMARY.md  EVAL_CONFIG_AUTO.md  EVAL_METRICS_OFFICIAL_REPOS.md  EVAL_PY_IMPROVEMENTS.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN.md.bak  HF_CONVERSION_REPORT.md  IMPROVED_USAGE.md  LLAVA_ONEVISION_FINETUNING.md  PANOROPЕ_IMPLEMENTATION_EXAMPLES.py  PANOROPЕ_POSITION_IDS.md  PANOROPЕ_QUICK_REFERENCE.md  PANOROPЕ_SUMMARY.md  README_PANOROPЕ.md  REFACTORING_RECOMMENDATIONS.md  RESAMPLER_CONFIG_FIX.md  RESAMPLER_USAGE_GUIDE.md  SACREBLEU_UPDATE.md  SETUP.md  TRAINED_MODEL_VISUALIZATION.md  VLM_EVALUATION_GUIDE.md  VLM_MODEL_UPDATES.md
docs/qualitative_eval/: qualitative_eval.md
eval_results/: SQ2_05_latent768_PE_addpreparing_e2p_vision_mlp.json  SQ2_05_latent768_PE_addpreparing_only50_20250909_000414.csv  SQ2_05_latent768_PE_e2p_finetune_mlp.json  e2p.json  metrics_20250807_114826.json  metrics_20250807_181408.json  metrics_20250816_223539.json  metrics_20250818_085802.json  metrics_20250828_111810.json  metrics_20250828_183210.json  metrics_20250901_025724.json  predictions_20250807_114826.csv  predictions_20250807_181408.csv  predictions_20250818_184905.csv  predictions_20250828_111810.csv  qwen25_it_e2p.csv  디노e2p.csv  디노e2p.json
eval_results/vlm/: qwen_vl_chat__lora_r16_metrics_20251001_221442.json  qwen_vl_chat__lora_r16_predictions_20251001_221442.csv
examples/: resampler_config_examples.yaml
legacy/CORA/: reproduce_issue.py  run_crop_ablation.sh
legacy/docs/: ANYRES_E2P_CODE_EXPLANATION.md  ANYRES_ERP_INTEGRATION.md  BIMAMBA_OVERLAP0_GUIDE.md  CACHE_MANAGEMENT.md  CHECKPOINT_EVAL_GUIDE.md  CONFIG_FIELD_MAPPING.md  COT_TOKEN_CLEANUP.md  DEFAULT_YAML_COMPARISON.md  EVALUATION_METRICS_GUIDE.md  EVAL_BATCH_SIZE_GUIDE.md  EVAL_QUICKSTART.md  EXPERIMENT_NAME_QUICKSTART.md  FLASH_ATTENTION_GUIDE.md  HF_INTEGRATION.md  LORA_CHECKPOINT_LOADING.md  MODEL_IMPROVEMENTS.md  NAMING_CONVENTION.md  (+7 more)
panovlm/: __init__.py  config.py  conversation_builder.py  dataset.py  dataset_backup.py  losses.py  model copy.py  model.py  model_backup.py  utils.py
scripts/: README.md  baseline_eval.py  baseline_finetune.py  build_stage1_csv.py  checking.py  collect_results.py  config.bat  config.sh  download_model.py  download_quic360_images.py  download_raw.py  dry_run.py  eval.py  eval.sh  eval_all_greedy.sh  eval_compare.sh  eval_finetune.sh  eval_lora_finetune.sh  eval_resampler.sh  evaluate_vlm_models.py  fig2_panorope.py  fix_corrupted_images.py  generate_qualitative_eval.py  inference.py  inference.sh  install_eval_metrics.sh  llm_judge_eval.py  merge_lora.py  migrate_runs.py  monitor_panoadapt_vicreg.sh  monitor_panoadapt_vicreg_25.sh  post_eval_greedy.sh  run_baseline.sh  run_baseline_no_qwen.sh  run_examples.sh  run_gpu0_phase2.sh  run_gpu0_trackb.sh  run_gpu1_phase2.sh  run_gpu1_trackb.sh  run_llm_judge.sh  (+49 more)
tests/: __init__.py  test_baseline_collate.py
tools/: measure_flops.py
(+278 files in other folders)
